# belvedere

./: .coverage  .gitignore  .pre-commit-config.yaml  BUILD.md  Belvedere.ahk  Belvedere.manifest  IMPLEMENTATION_SUMMARY.md  PYTHON_VERSION.md  README.md  TESTING_SUMMARY.md  VERSION_COMPARISON.md  WINDOWS11_COMPATIBILITY.md  belvedere.py  belvedere.spec  pyproject.toml  requirements.txt  run_belvedere.py  setup.py  test_belvedere.py
.github/workflows/: lint.yml  release.yml  test.yml
belvedere/: __init__.py  config.py  file_monitor.py  main.py  main_window.py  recycle_bin_manager.py  rule_dialog.py  rule_engine.py
docs/: README.md  building.md  changelog.md  development.md  getting-started.md  implementation.md  installation.md  troubleshooting.md  usage.md
installer/: installer.nsi
tests/: QUICKSTART.md  README.md  conftest.py  test_config.py  test_file_monitor.py  test_recycle_bin_manager.py  test_rule_engine.py
